[package]
name = "sutro"
desrciption = "Eye of Sutro: Ethereum State Watcher"
version = "0.0.1"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
cranelift = "0.66.0"
cranelift-module = "0.66.0"
cranelift-simplejit = "0.66.0"
peg = "0.6"
hex-literal = "0.3.1"
zkp-u256 = "0.2.0"
zkp-macros-decl = "0.2.0"
thiserror = "1.0.20"
anyhow = "1.0.32"
ethereum = "0.3.3"
web3 = "0.13.0"
tokio = { version = "0.2.22", features = [ "full" ] }
hex = "0.4.2"
env_logger = "0.7.1"
tiny-keccak = "2.0.2"
log = "0.4.11"
ethabi = "12.0.0"
logos = "0.11.4"
serde = "1.0.116"
jsonrpc-http-server = "14.2"
