[package]
name = "sutro"
description = "Eye of Sutro: Ethereum State Watcher"
version = "0.0.1"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
cranelift = "0.66.0"
cranelift-module = "0.66.0"
cranelift-simplejit = "0.66.0"
env_logger = "0.7.1"
ethabi = "12.0.0"
futures = "0.3.6"
hex = "0.4.2"
hex-literal = "0.3.1"
jsonrpc-core = "15.1"
jsonrpc-http-server = "15.1"
log = "0.4.11"
logos = "0.11.4"
peg = "0.6"
rlp = "0.4.6"
serde = "1.0.116"
serde_json = "1.0.59"
thiserror = "1.0.20"
tiny-keccak = "2.0.2"
tokio = { version = "0.2.22", features = [ "full" ] }
web3 = "0.13.0"
zkp-macros-decl = "0.2.0"
zkp-u256 = "0.2.0"
