[package]
name = "sutro"
version = "0.0.2"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"
build = "build.rs"
homepage = "https://github.com/0xProject/sutro"
repository = "https://github.com/0xProject/sutro"
description = "Eye of Sutro: Ethereum State Watcher"
categories = ["cryptography::cryptocurrencies"]
keywords = ["ethereum", "monitoring"]
readme = "Readme.md"
license = "MIT"

[features]
features = [ "bench" ]
bench = [ "criterion" ]

[lib]
path = "src/main.rs"

[[bench]]
name = "criterion"
harness = false
required-features = ["bench"]

[dependencies]
anyhow = "1.0"
criterion = { version = "0.3", optional = true }
futures = "0.3"
hex = "0.4"
hex-literal = "0.3"
hyper = "0.14"
itertools = "0.10"
num_cpus = "1.13"
once_cell = "1.5"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.5"
serde = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-compat-02 = "0.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing-test = "0.1"
tracing-timing = "0.4"

smallvec = { version = "1.5", features = [ "serde" ] }
async-trait = "0.1"
cranelift = "0.68"
cranelift-module = "0.68"
cranelift-simplejit = "0.68"
humantime = "2.0"
jsonrpc-core = "16.0"
jsonrpc-derive = "16.0"
jsonrpc-http-server = "16.0"
jsonrpc-core-client = { version = "16.0", features = [ "http", "ws" ] }
rlp = "0.5"
serde_json = "1.0"
serde_with = "1.6"
tiny-keccak = "2.0"
web3 = "0.14"
zkp-u256 = "0.2.1"
zkp-macros-decl = "0.2.0"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6"
proptest = "0.10"

[build-dependencies]
anyhow = "1.0"
chrono = "0.4"

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
